# kmip

./: .gitignore  Cargo.toml  README.md  TODO.txt
client/: Cargo.toml
client/src/: main.rs
kmip_client/: Cargo.toml
kmip_client/src/: kmip.code-workspace  lib.rs
protocol/: Cargo.toml
protocol/src/: de.rs  de_xml.rs  error.rs  failures.rs  kmip_enums.rs  lib.rs  my_date_format.rs  my_opt_date_format.rs  ser.rs  ser_xml.rs
python/: client.py
serde_enum/: Cargo.toml
serde_enum/src/: lib.rs  parse.rs
server/: Cargo.toml
server/src/: lib.rs  test_util.rs
server/src/crypto/: mod.rs  rng.rs
server/src/store/: mem.rs  mod.rs  mongodb.rs
src/: kmip_enums.rs  main.rs  messages.rs  ttlv.rs
src/store/: mem.rs  mod.rs  mongodb.rs  option_datefmt.rs
test/: README  ca.key  ca.pem  ca_all.pem  ca_all.srl  client.csr  client.key  client.pem  server.csr  server.key  server.pem  server_all.pem
test_data/: README  ca.pem  ca_all.pem  client.csr  client_all.pem  server.key  server.pem  server_all.pem  server_orig.key
tests/: e2e.rs
tests_e2e/: Cargo.toml
tests_e2e/src/: client.rs  lib.rs  util.rs
ttlv/: Cargo.toml  de.rs  error.rs  failures.rs  kmip_enums.rs  lib.rs  my_date_format.rs  ser.rs
ttlv/tests/: de_tests.rs
