# [package]
# name = "kmip"
# version = "0.1.0"
# authors = ["Mark Benvenuto <mark.benvenuto@mongodb.com>"]
# edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "client",
    "kmip_client",
    "protocol",
    "serde_enum",
    "server",
    "tests_e2e"
]

