# [package]
# name = "kmip"
# version = "0.1.0"
# authors = ["Mark Benvenuto <mark.benvenuto@mongodb.com>"]
# edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = [
    "client",
    "kmip_client",
    "protocol",
    "serde_enum",
    "server",
    "tests_e2e"
]

[workspace.package]
version = "0.1.0"
edition = "2024"


[workspace.dependencies]
protocol = {path="protocol"}
kmip_client = {path="kmip_client"}
serde_enum = {path="serde_enum"}

aes = "0.6.0"
block-modes = "0.7.0"
bson = { version="3.1.0", features=["serde"] }
byteorder = "1.4.3"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "4.5.60"
clap-log-flag = "0.2.1"
clap-verbosity-flag = "3.0.4"
confy = "0.4.0"
difference = "2.0.0"
digest = "0.9.0"
env_logger= "0.11.9"
futures = "0.3.13"
hex = "0.4.3"
hmac = "0.10.1"
lazy_static = "1.4.0"
log= "0.4.14"
minidom = "0.13.0"
mio = "1.1.1"
mongodb = { version = "3.5.1", features = ["sync"] }
num = "0.4.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
pretty-hex = "0.2.1"
ring = "0.16.15"
rustls = {version="0.23.36", features=["aws_lc_rs"]}
serde = "1.0.125"
serde_bytes = "0.11.5"
serde_derive = "1.0.125"
sha2 = "0.9.9"
strum = "0.20.0"
strum_macros = "0.20.1"
thiserror="2.0.18"
tokio = "1.4.0"
vecio = "0.1.0"
webpki = "0.21.4"
webpki-roots = "1.0.6"
xml-rs = "0.8.3"
