[package]
name = "client"
version = "0.1.0"
authors = ["Mark Benvenuto <mark.benvenuto@mongodb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = {path="../protocol"}
kmip_client = {path="../kmip_client"}

structopt = "0.3.20"
clap-verbosity-flag = "0.3.1"
clap-log-flag = "0.2.1"
log= "0.4.11"
env_logger= "0.8.1"

confy = "0.4.0"

pretty-hex = "0.2.1"

rustls = "0.18.1"
mio = "0.7.3"

webpki = "0.21.3"

