[package]
name = "client"
authors = ["Mark Benvenuto <mark.benvenuto@mongodb.com>"]
license = "Apache-2.0"
version.workspace = true
edition.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

protocol  = { workspace = true }
kmip_client  = { workspace = true }

clap  = { workspace = true }
hex  = { workspace = true }
clap-verbosity-flag  = { workspace = true }
clap-log-flag  = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

confy  = { workspace = true }

pretty-hex  = { workspace = true }

rustls  = { workspace = true }
mio  = { workspace = true }

webpki  = { workspace = true }
webpki-roots  = { workspace = true }

#quick-xml  = { workspace = true }
minidom  = { workspace = true }
