[package]
name = "kmip_client"
version = "0.1.0"
authors = ["Mark Benvenuto <mark.benvenuto@mongodb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ttlv = {path="../ttlv"}
protocol = {path="../protocol"}
log= "0.4.7"

pretty-hex = "0.1.0"