[package]
name = "kmip_client"
version = "0.1.0"
authors = ["Mark Benvenuto <mark.benvenuto@mongodb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = {path="../protocol"}
log= "0.4.11"

pretty-hex = "0.2.1"

num = "0.3.0"
num-traits = "0.2.12"
num-derive = "0.3.2"

