[package]
name = "kmip_client"
authors = ["Mark Benvenuto <mark.benvenuto@mongodb.com>"]
license = "Apache-2.0"
version.workspace = true
edition.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { workspace = true }
log = { workspace = true }
serde_bytes = { workspace = true }

pretty-hex  = { workspace = true }

num  = { workspace = true }
num-traits  = { workspace = true }
num-derive  = { workspace = true }

thiserror = { workspace = true }
