[package]
name = "protocol"
version = "0.1.0"
authors = ["Mark Benvenuto <mark.benvenuto@mongodb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_enum = {path="../serde_enum"}

serde = "1.0.117"
serde_derive = "1.0.117"
serde_bytes = "0.11.5"

num = "0.3.0"
num-traits = "0.2.12"
num-derive = "0.3.2"

strum = "0.19.5"
strum_macros = "0.19.4"

chrono = { version = "0.4.19", features = ["serde"] }

log = "0.4.11"

byteorder = "1.3.4"

pretty-hex = "0.2.1"

failure = "0.1.8"
failure_derive = "0.1.8"
