[package]
name = "protocol"
version = "0.1.0"
authors = ["Mark Benvenuto <mark.benvenuto@mongodb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_enum = {path="../serde_enum"}

serde = "1.0.123"
serde_derive = "1.0.123"
serde_bytes = "0.11.5"

num = "0.4.0"
num-traits = "0.2.12"
num-derive = "0.3.3"

strum = "0.20.0"
strum_macros = "0.20.1"

chrono = { version = "0.4.19", features = ["serde"] }

log = "0.4.11"

byteorder = "1.4.3"

pretty-hex = "0.2.1"
hex = "0.4.2"

failure = "0.1.8"
failure_derive = "0.1.8"

xml-rs = "0.8.3"
