[package]
name = "protocol"
authors = ["Mark Benvenuto <mark.benvenuto@mongodb.com>"]
license = "Apache-2.0"
version.workspace = true
edition.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_enum = { workspace = true }

serde = { workspace = true }
serde_derive = { workspace = true }
serde_bytes = { workspace = true }

num = { workspace = true }
num-traits = { workspace = true }
num-derive = { workspace = true }

strum = { workspace = true }
strum_macros = { workspace = true }

chrono = { workspace = true, features = ["serde"] }

log = { workspace = true }

byteorder = { workspace = true }

pretty-hex = { workspace = true }
hex = { workspace = true }

xml-rs = { workspace = true }

thiserror = { workspace = true }
