[package]
name = "serde_enum"
version = "0.1.0"
authors = ["Mark Benvenuto <mark.benvenuto@mongodb.com>"]
edition = "2018"
description = "Fork of serde-repr 0.1.4 from https://github.com/dtolnay/serde-repr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.17"
quote = "1.0.6"
syn = "1.0.27"

