[package]
name = "kmip_server"
version = "0.1.0"
authors = ["Mark Benvenuto <mark.benvenuto@mongodb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_enum = {path="../serde_enum"}
protocol = {path="../protocol"}

byteorder = "1.3.4"

serde = "1.0.117"
serde_derive = "1.0.117"
pretty-hex = "0.2.1"
#serde-transcode = "1.1.0"
#serde_json = "1.0.40"
serde_bytes = "0.11.5"

structopt = "0.3.20"
clap-verbosity-flag = "0.3.1"
clap-log-flag = "0.2.1"
log= "0.4.11"
env_logger= "0.8.1"

confy = "0.4.0"

num = "0.3.0"
num-traits = "0.2.12"
num-derive = "0.3.2"


rustls = "0.18.1"
mio = "0.7.3"

ring = "0.16.15"

vecio = "0.1.0"

strum = "0.19.5"
strum_macros = "0.19.4"

chrono = { version = "0.4.19", features = ["serde"] }

lazy_static = "1.4.0"

bson = "1.1.0"

mongodb = "1.1.1"
futures = "0.3.6"
tokio = "0.3.0"

# TODO - consider https://github.com/rust-cli/human-panic

# TODO - https://github.com/RustCrypto/block-ciphers?


# Crypto
# https://github.com/RustCrypto
block-modes = "0.7.0"
aes = "0.6.0"
