[package]
name = "kmip_server"
version = "0.1.0"
authors = ["Mark Benvenuto <mark.benvenuto@mongodb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_enum = {path="../serde_enum"}
protocol = {path="../protocol"}

byteorder = "1.3.4"

serde = "1.0.125"
serde_derive = "1.0.125"
pretty-hex = "0.2.1"
#serde-transcode = "1.1.0"
#serde_json = "1.0.40"
serde_bytes = "0.11.5"

thiserror = "1.0.24"

structopt = "0.3.20"
clap-verbosity-flag = "0.3.1"
clap-log-flag = "0.2.1"
log= "0.4.11"
env_logger= "0.8.1"

confy = "0.4.0"

num = "0.4.0"
num-traits = "0.2.12"
num-derive = "0.3.2"


rustls = "0.19.0"
mio = "0.7.3"

ring = "0.16.15"

vecio = "0.1.0"

strum = "0.20.0"
strum_macros = "0.20.1"

chrono = { version = "0.4.19", features = ["serde"] }

lazy_static = "1.4.0"

bson = "1.2.0"

mongodb = "1.2.0"
futures = "0.3.13"
tokio = "1.4.0"

# TODO - consider https://github.com/rust-cli/human-panic

# TODO - https://github.com/RustCrypto/block-ciphers?


# Crypto
# https://github.com/RustCrypto
block-modes = "0.7.0"
aes = "0.6.0"

crypto-mac = "0.10.0"
digest = "0.9.0"
hmac = "0.10.1"

sha2 = "0.9.3"
#sha3 = "0.9.1"
