[package]
name = "kmip_server"
authors = ["Mark Benvenuto <mark.benvenuto@mongodb.com>"]
license = "Apache-2.0"
version.workspace = true
edition.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_enum = { workspace = true }
protocol =  { workspace = true }
byteorder  = { workspace = true }

serde  = { workspace = true }
serde_derive  = { workspace = true }
pretty-hex  = { workspace = true }
serde_bytes  = { workspace = true }

thiserror  = { workspace = true }

clap  = { workspace = true }
clap-verbosity-flag  = { workspace = true }
clap-log-flag  = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

confy  = { workspace = true }

num  = { workspace = true }
num-traits  = { workspace = true }
num-derive  = { workspace = true }


rustls  = { workspace = true }
mio  = { workspace = true }

ring  = { workspace = true }

vecio  = { workspace = true }

strum  = { workspace = true }
strum_macros  = { workspace = true }

chrono  = { workspace = true }

lazy_static  = { workspace = true }

bson  = { workspace = true }

mongodb  = { workspace = true }
futures  = { workspace = true }
tokio  = { workspace = true }

# TODO - consider https://github.com/rust-cli/human-panic

# TODO - https://github.com/RustCrypto/block-ciphers?


# Crypto
# https://github.com/RustCrypto
block-modes  = { workspace = true }
aes  = { workspace = true }

digest  = { workspace = true }
hmac  = { workspace = true }

sha2  = { workspace = true }
webpki-roots  = { workspace = true }
