[package]
name = "tests_e2e"
version = "0.1.0"
authors = ["Mark Benvenuto <mark.benvenuto@mongodb.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kmip_client = { workspace = true }
kmip_server = {path="../server"}
protocol =  { workspace = true }

log =  { workspace = true }

hex  =  { workspace = true }
# pretty-hex  =  { workspace = true }

# num  =  { workspace = true }
# num-traits  =  { workspace = true }
# num-derive  =  { workspace = true }

rustls  =  { workspace = true }

webpki  =  { workspace = true }
webpki-roots  =  { workspace = true }

minidom  =  { workspace = true }

difference=    { workspace = true }

# crossbeam-channel="0.5.0"
lazy_static  =  { workspace = true }
