[package]
name = "ttlv"
version = "0.1.0"
authors = ["Mark Benvenuto <mark.benvenuto@mongodb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"

serde = { version = "1.0.94", features = ["derive"] }
#serde_derive = "1.0.94"
serde_repr = "0.1"
serde_bytes = "0.11.1"

pretty-hex = "0.1.0"

num = "0.2.0"
num-traits = "0.2"
num-derive = "0.2.5"

strum = "0.15.0"
strum_macros = "0.15.0"

chrono = "0.4.7"

#serde_enum = {path="serde_enum"}


[lib]
name = "ttlv"
path = "lib.rs"
